<resources>
    <string name="app_name">iLearn</string>
    <string name="title_exercise">题库</string>
    <string name="title_chatbot">问答</string>
    <string name="title_home">主页</string>
    <string name="title_link">链接</string>
    <string name="title_me">我</string>
    <string name="floating_search">搜索实体</string>
    <string name="search_entity">搜实体</string>
    <string name="search_linking">实体链接</string>
    <string name="search_problem">搜题</string>
    <string name="input_hint">请输入</string>
    <string name="dark_mode">黑夜模式</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="privacy_policy">
        使用SDK名称：友盟SDK
        \n服务类型：社会分享
        \n收集个人信息类型：设备信息（IMEI/MAC/Android ID/IDFA/OpenUDID/GUID/SIM卡IMSI/地理位置等)
        \n隐私权政策链接：https://www.umeng.com/page/policy
    </string>
</resources>