<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_exercise"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/title_exercise" />

    <item
        android:id="@+id/navigation_chatbot"
        android:icon="@drawable/ic_baseline_question_answer_24"
        android:title="@string/title_chatbot" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_link"
        android:icon="@drawable/ic_link_24"
        android:title="@string/title_link" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_user"
        android:title="@string/title_me" />

</menu>