<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_exercise"
        android:name="com.tea.ilearn.ui.home.HomeFragment"
        android:label="@string/title_exercise"
        tools:layout="@layout/fragment_exercise" />

    <fragment
        android:id="@+id/navigation_chatbot"
        android:name="com.tea.ilearn.ui.chatbot.ChatbotFragment"
        android:label="@string/title_chatbot"
        tools:layout="@layout/fragment_chatbot" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tea.ilearn.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_link"
        android:name="com.tea.ilearn.ui.link.LinkFragment"
        android:label="@string/title_link"
        tools:layout="@layout/fragment_link" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.tea.ilearn.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />
</navigation>